feat: spells, armors and weapons are contractibles

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -43,6 +43,39 @@
 
 .common- {
   &group {
+    & .contractible-group {
+      position: relative;
+
+      &.retracted {
+        .group-body, .group-footer {
+          display: none !important;
+        }
+      }
+
+      .contractible-button {
+        position: absolute;
+        top: -0.5rem;
+        right: -0.5rem;
+        z-index: 10;
+        cursor: pointer;
+        background-color: white;
+        width: 1.25rem;
+        height: 1.25rem;
+        border-radius: 50%;
+        border: none;
+
+        transition: background-color 0.3ms ease-in-out;
+
+        &:hover {
+          background-color: $light-gray;
+        }
+
+        &.retracted {
+          transform: rotate(180deg);
+        }
+      }
+    }
+
     width: 100%;
 
     display: flex;
