changes: move psichic powers to its own tabs

--- a/src/scss/actor/parts/main.scss
+++ b/src/scss/actor/parts/main.scss
@@ -5,7 +5,8 @@
   flex-direction: column;
 
   .sheet-tabs,
-  .mystic-tabs {
+  .mystic-tabs,
+  .psychic-tabs {
     &.secondary-tab {
       margin-top: 0;
     }
