--- a/src/scss/actor/parts/mystic.scss
+++ b/src/scss/actor/parts/mystic.scss
@@ -293,6 +293,7 @@
 
       .spell-row {
         width: calc(50% - 1rem);
+        height: 100%;
 
         border-radius: $border-radius;
         box-shadow: $card-box-shadow;
