--- a/src/templates/actor/parts/psychic/parts/psychic-powers.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-powers.hbs
@@ -13,25 +13,39 @@
       <div data-item-id='{{power._id}}' class='psychic-power-row'>
         {{#> "systems/animabf/templates/common/ui/group.hbs"
           class="psychic-power"
+          contractible=true
+          contractibleItemId=power._id
         }}
           {{#> "systems/animabf/templates/common/ui/group-header.hbs"}}
             <div class='psychic-power-header'>
-              {{>
-              "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-                class="name"
-                title=(localize "anima.ui.psychic.psychicPowers.power.header.name.title")
-                inputType="text"
-                inputName=(concat "data.dynamic.psychicPowers." power._id ".name")
-                inputValue=power.name
-              }}
-              {{>
-              "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-                class="level"
-                title=(localize "anima.ui.psychic.psychicPowers.power.header.level.title")
-                inputType="text"
-                inputName=(concat "data.dynamic.psychicPowers." power._id ".data.level.value")
-                inputValue=power.data.level.value
-              }}
+              <div class='first-row'>
+                {{>
+                "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+                  class="name"
+                  hideTitle=true
+                  inputType="text"
+                  inputName=(concat "data.dynamic.psychicPowers." power._id ".name")
+                  inputValue=power.name
+                }}
+              </div>
+              <div class='second-row'>
+                {{>
+                "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+                  class="level"
+                  title=(localize "anima.ui.psychic.psychicPowers.power.header.level.title")
+                  inputType="text"
+                  inputName=(concat "data.dynamic.psychicPowers." power._id ".data.level.value")
+                  inputValue=power.data.level.value
+                }}
+                {{>
+                'systems/animabf/templates/common/ui/custom-select-choices.hbs'
+                  class="action-type"
+                  choices=xRoot.config.iterables.psychic.actionTypes
+                  title=(localize "anima.ui.psychic.psychicPowers.power.footer.actionType.title")
+                  inputName=(concat "data.dynamic.psychicPowers." power._id ".data.actionType.value")
+                  inputValue=power.data.actionType.value
+                }}
+              </div>
             </div>
           {{/"systems/animabf/templates/common/ui/group-header.hbs"}}
           {{#> "systems/animabf/templates/common/ui/group-body.hbs"
@@ -41,13 +55,13 @@
               <div class='effect-row'>
                 <input
                   type='text'
-                  class='input'
+                  class='input difficulty'
                   disabled
                   value='{{getDifficultyFromIndex @index}}'
                 />
                 <input
                   type='text'
-                  class='input'
+                  class='input description'
                   name='{{concat "data.dynamic.psychicPowers." power._id ".data.effects." @index}}'
                   value='{{effect.value}}'
                 />
@@ -56,14 +70,6 @@
           {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
           {{#> "systems/animabf/templates/common/ui/group-footer.hbs"}}
             <div class='psychic-power-footer'>
-              {{>
-              "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-                class="action-type"
-                title=(localize "anima.ui.psychic.psychicPowers.power.footer.actionType.title")
-                inputType='text'
-                inputName=(concat "data.dynamic.psychicPowers." power._id ".data.actionType.value")
-                inputValue=power.data.actionType.value
-              }}
               {{>
               "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
                 class="has-maintenance"
