--- a/src/scss/actor/parts/general.scss
+++ b/src/scss/actor/parts/general.scss
@@ -307,14 +307,16 @@
   // Description
   .description {
     .group-body {
-      .input {
-        border: none;
-      }
+      .editor {
+        @include input;
 
-      .result {
-        font-weight: bold;
-        height: 8rem;
-        overflow-y: scroll;
+        font-weight: inherit;
+
+        height: 15rem;
+        width: 100%;
+
+        margin-top: 0;
+        border-radius: 0.5rem;
       }
     }
   }
