--- a/src/templates/actor/parts/general/parts/description.hbs
+++ b/src/templates/actor/parts/general/parts/description.hbs
@@ -3,13 +3,6 @@
     <h3 class='group-header-title'>{{localize 'anima.ui.descriptionSection.title'}}</h3>
   </div>
   <div class='group-body'>
-    <input
-      name='data.general.description.value'
-      class='input'
-      value='{{data.data.general.description.value}}'
-    />
-    <p class='result'>
-      {{data.data.general.description.value}}
-    </p>
+    {{editor content=data.data.general.description.value target="data.general.description.value" button=true owner=true editable=true}}
   </div>
 </div>
