--- a/src/scss/actor/parts/combat.scss
+++ b/src/scss/actor/parts/combat.scss
@@ -7,7 +7,8 @@
     grid-column-gap: 1rem;
   }
 
-  .second-row {
+  .second-row,
+  .third-column {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1rem;
@@ -81,28 +82,52 @@
       border-radius: $border-radius;
       box-shadow: $card-box-shadow;
 
+      .attack,
+      .block,
+      .damage,
+      .integrity,
+      .breaking,
+      .presence,
+      .initiative,
+      .fue-required,
+      .quality {
+        .input-container {
+          width: 2.75rem;
+        }
+      }
+
       .group-body {
         display: flex;
         justify-content: space-evenly;
         flex-wrap: wrap;
+
+        .common-titled-input {
+          flex-basis: 3rem;
+
+          margin: 0.5rem;
+        }
 
         .special {
           .input-container {
             width: 10rem;
           }
         }
+      }
 
-        .attack,
-        .block,
-        .damage,
-        .integrity,
-        .breaking,
-        .presence,
-        .initiative,
-        .fue-required,
-        .quality {
-          .input-container {
-            width: 2.75rem;
+      .group-footer {
+        height: 5rem;
+        padding-bottom: 0.5rem;
+
+        .weapon-footer {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+
+          padding-left: 0.5rem;
+          padding-right: 0.5rem;
+
+          .input {
+            height: 1.5rem;
           }
         }
       }
@@ -127,23 +152,47 @@
       border-radius: $border-radius;
       box-shadow: $card-box-shadow;
 
+      .cut,
+      .impact,
+      .thrust,
+      .heat,
+      .electricity,
+      .cold,
+      .energy,
+      .quality,
+      .integrity,
+      .final-movement-restriction {
+        .input-container {
+          width: 2.75rem;
+        }
+      }
+
       .group-body {
         display: flex;
         justify-content: space-evenly;
         flex-wrap: wrap;
 
-        .cut,
-        .impact,
-        .thrust,
-        .heat,
-        .electricity,
-        .cold,
-        .energy,
-        .quality,
-        .integrity,
-        .final-movement-restriction {
-          .input-container {
-            width: 2.75rem;
+        .common-titled-input {
+          flex-basis: 6rem;
+
+          margin: 0.5rem;
+        }
+      }
+
+      .group-footer {
+        height: 5rem;
+        padding-bottom: 0.5rem;
+
+        .armor-footer {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+
+          padding-left: 0.5rem;
+          padding-right: 0.5rem;
+
+          .input {
+            height: 1.5rem;
           }
         }
       }
