--- a/src/templates/actor/parts/combat/combat.hbs
+++ b/src/templates/actor/parts/combat/combat.hbs
@@ -3,9 +3,11 @@
          {{> "systems/animabf/templates/actor/parts/combat/parts/base-values.hbs"}}
          {{> "systems/animabf/templates/actor/parts/combat/parts/ammo.hbs"}}
     </div>
-    {{> "systems/animabf/templates/actor/parts/combat/parts/weapons.hbs"}}
-    {{> "systems/animabf/templates/actor/parts/combat/parts/armors.hbs"}}
     <div class='second-row'>
+      {{> "systems/animabf/templates/actor/parts/combat/parts/weapons.hbs"}}
+      {{> "systems/animabf/templates/actor/parts/combat/parts/armors.hbs"}}
+    </div>
+    <div class='third-row'>
       {{> "systems/animabf/templates/actor/parts/combat/parts/combat-special-skills.hbs"}}
       {{> "systems/animabf/templates/actor/parts/combat/parts/combat-tables.hbs"}}
     </div>
