--- a/src/templates/actor/parts/combat/parts/armors.hbs
+++ b/src/templates/actor/parts/combat/parts/armors.hbs
@@ -31,76 +31,12 @@
             class="armor"
           }}
             {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="equipped"
-              title=(localize "anima.ui.combat.armors.equipped.title")
-              inputType="checkbox"
-              inputName=(concat "data.dynamic.armors." this._id ".data.equipped.value")
-              inputValue=(is 'eq' this.data.equipped.value true)
-            }}
-            {{>
             'systems/animabf/templates/common/domain/select-quality.hbs'
               class="quality"
               isVertical=true
               title=(localize "anima.ui.combat.armors.quality.title")
               inputName=(concat "data.dynamic.armors." this._id ".data.quality.value")
               inputValue=this.data.quality.value
-            }}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="cut"
-              title=(localize "anima.ui.combat.armors.at.cut.title")
-              disabled=true
-              inputName=(concat "data.dynamic.armors." this._id ".data.cut.final.value")
-              inputValue=this.data.cut.final.value
-            }}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="impact"
-              title=(localize "anima.ui.combat.armors.at.impact.title")
-              disabled=true
-              inputName=(concat "data.dynamic.armors." this._id ".data.impact.final.value")
-              inputValue=this.data.impact.final.value
-            }}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="thrust"
-              title=(localize "anima.ui.combat.armors.at.thrust.title")
-              disabled=true
-              inputName=(concat "data.dynamic.armors." this._id ".data.thrust.final.value")
-              inputValue=this.data.thrust.final.value
-            }}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="heat"
-              title=(localize "anima.ui.combat.armors.at.heat.title")
-              disabled=true
-              inputName=(concat "data.dynamic.armors." this._id ".data.heat.final.value")
-              inputValue=this.data.heat.final.value
-            }}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="electricity"
-              title=(localize "anima.ui.combat.armors.at.electricity.title")
-              disabled=true
-              inputName=(concat "data.dynamic.armors." this._id ".data.electricity.final.value")
-              inputValue=this.data.electricity.final.value
-            }}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="cold"
-              title=(localize "anima.ui.combat.armors.at.cold.title")
-              disabled=true
-              inputName=(concat "data.dynamic.armors." this._id ".data.cold.final.value")
-              inputValue=this.data.cold.final.value
-            }}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="energy"
-              title=(localize "anima.ui.combat.armors.at.energy.title")
-              disabled=true
-              inputName=(concat "data.dynamic.armors." this._id ".data.energy.final.value")
-              inputValue=this.data.energy.final.value
             }}
             {{>
             "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
@@ -135,6 +71,74 @@
               inputValue=this.data.naturalPenalty.final.value
             }}
           {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
+          {{#> "systems/animabf/templates/common/ui/group-footer.hbs"}}
+            <div class='armor-footer'>
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="equipped"
+                title=(localize "anima.ui.combat.armors.equipped.title")
+                inputType="checkbox"
+                inputName=(concat "data.dynamic.armors." this._id ".data.equipped.value")
+                inputValue=(is 'eq' this.data.equipped.value true)
+              }}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="cut"
+                title=(localize "anima.ui.combat.armors.at.cut.title")
+                disabled=true
+                inputName=(concat "data.dynamic.armors." this._id ".data.cut.final.value")
+                inputValue=this.data.cut.final.value
+              }}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="impact"
+                title=(localize "anima.ui.combat.armors.at.impact.title")
+                disabled=true
+                inputName=(concat "data.dynamic.armors." this._id ".data.impact.final.value")
+                inputValue=this.data.impact.final.value
+              }}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="thrust"
+                title=(localize "anima.ui.combat.armors.at.thrust.title")
+                disabled=true
+                inputName=(concat "data.dynamic.armors." this._id ".data.thrust.final.value")
+                inputValue=this.data.thrust.final.value
+              }}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="heat"
+                title=(localize "anima.ui.combat.armors.at.heat.title")
+                disabled=true
+                inputName=(concat "data.dynamic.armors." this._id ".data.heat.final.value")
+                inputValue=this.data.heat.final.value
+              }}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="electricity"
+                title=(localize "anima.ui.combat.armors.at.electricity.title")
+                disabled=true
+                inputName=(concat "data.dynamic.armors." this._id ".data.electricity.final.value")
+                inputValue=this.data.electricity.final.value
+              }}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="cold"
+                title=(localize "anima.ui.combat.armors.at.cold.title")
+                disabled=true
+                inputName=(concat "data.dynamic.armors." this._id ".data.cold.final.value")
+                inputValue=this.data.cold.final.value
+              }}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="energy"
+                title=(localize "anima.ui.combat.armors.at.energy.title")
+                disabled=true
+                inputName=(concat "data.dynamic.armors." this._id ".data.energy.final.value")
+                inputValue=this.data.energy.final.value
+              }}
+            </div>
+          {{/"systems/animabf/templates/common/ui/group-footer.hbs"}}
         {{/"systems/animabf/templates/common/ui/group.hbs"}}
       </div>
     {{/each}}
