--- a/src/templates/actor/parts/combat/parts/weapons.hbs
+++ b/src/templates/actor/parts/combat/parts/weapons.hbs
@@ -31,16 +31,6 @@
           {{#> "systems/animabf/templates/common/ui/group-body.hbs"
             class="weapon"
           }}
-            {{>
-            'systems/animabf/templates/common/ui/custom-select-choices.hbs'
-              class="critic-primary"
-              isVertical=true
-              disabled=true
-              title=(localize "anima.ui.combat.weapons.critic.primary.title")
-              choices=xRoot.config.iterables.combat.weapon.criticTypes
-              inputName=(concat "data.dynamic.weapons." this._id ".data.critic.primary.value")
-              inputValue=this.data.critic.primary.value
-            }}
             {{#if (or (is 'eq' this.data.isRanged.value false) (is 'eq' this.data.shotType.value 'throw'))}}
               {{>
               'systems/animabf/templates/common/ui/custom-select-choices.hbs'
@@ -59,54 +49,6 @@
               title=(localize "anima.ui.combat.weapons.quality.title")
               inputName=(concat "data.dynamic.weapons." this._id ".data.quality.value")
               inputValue=this.data.quality.value
-            }}
-            {{#if (is 'eq' this.data.manageabilityType.value 'one_or_two_hands')}}
-              {{>
-              "systems/animabf/templates/common/domain/weapon/one-or-two-handed.hbs"
-                class="one-or-two-handed"
-                title=(localize "anima.ui.combat.weapons.oneOrTwoHanded.title")
-                inputName=(concat "data.dynamic.weapons." this._id ".data.oneOrTwoHanded.value")
-                inputValue=this.data.oneOrTwoHanded.value
-              }}
-            {{/if}}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="attack"
-              disabled=true
-              title=(localize "anima.ui.combat.weapons.attack.title")
-              rollable=true
-              rollableMessage=(concat (localize "anima.ui.combat.weapons.attack.roll.message") this.name)
-              inputName=(concat "data.dynamic.weapons." this._id ".data.attack.value")
-              inputValue=this.data.attack.value
-            }}
-            {{#unless (is 'eq' this.data.isRanged.value true)}}
-              {{>
-              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-                class="block"
-                disabled=true
-                title=(localize "anima.ui.combat.weapons.block.title")
-                rollable=true
-                rollableMessage=(concat (localize "anima.ui.combat.weapons.block.roll.message") this.name)
-                inputName=(concat "data.dynamic.weapons." this._id ".data.block.value")
-                inputValue=this.data.block.value
-              }}
-            {{/unless}}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="damage"
-              disabled=true
-              title=(localize "anima.ui.combat.weapons.damage.final.title")
-              inputName=(concat "data.dynamic.weapons." this._id ".data.damage.final.value")
-              inputValue=this.data.damage.final.value
-            }}
-            {{>
-            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-              class="initiative"
-              rollable=true
-              disabled=true
-              title=(localize "anima.ui.combat.weapons.initiative.final.title")
-              inputName=(concat "data.dynamic.weapons." this._id ".data.initiative.final.value")
-              inputValue=this.data.initiative.final.value
             }}
             {{>
             "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
@@ -134,12 +76,6 @@
               title=(localize "anima.ui.combat.weapons.presence.final.title")
               inputName=(concat "data.dynamic.weapons." this._id ".data.presence.final.value")
               inputValue=this.data.presence.final.value
-            }}
-            {{> 'systems/animabf/templates/common/domain/weapon/knowledge-type.hbs'
-              class="knowledge-type"
-              title=(localize "anima.ui.combat.weapons.knowledgeType.title")
-              inputName=(concat "data.dynamic.weapons." this._id ".data.knowledgeType.value")
-              inputValue=this.data.knowledgeType.value
             }}
             {{#if (is 'eq' this.data.isRanged.value true)}}
               {{>
@@ -170,7 +106,75 @@
                 }}
               {{/if}}
             {{/if}}
+            {{> 'systems/animabf/templates/common/domain/weapon/knowledge-type.hbs'
+              class="knowledge-type"
+              title=(localize "anima.ui.combat.weapons.knowledgeType.title")
+              inputName=(concat "data.dynamic.weapons." this._id ".data.knowledgeType.value")
+              inputValue=this.data.knowledgeType.value
+            }}
           {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
+          {{#> "systems/animabf/templates/common/ui/group-footer.hbs"}}
+            <div class='weapon-footer'>
+              {{>
+              'systems/animabf/templates/common/ui/custom-select-choices.hbs'
+                class="critic-primary"
+                isVertical=true
+                disabled=true
+                title=(localize "anima.ui.combat.weapons.critic.primary.title")
+                choices=xRoot.config.iterables.combat.weapon.criticTypes
+                inputName=(concat "data.dynamic.weapons." this._id ".data.critic.primary.value")
+                inputValue=this.data.critic.primary.value
+              }}
+              {{#if (is 'eq' this.data.manageabilityType.value 'one_or_two_hands')}}
+                {{>
+                "systems/animabf/templates/common/domain/weapon/one-or-two-handed.hbs"
+                  class="one-or-two-handed"
+                  title=(localize "anima.ui.combat.weapons.oneOrTwoHanded.title")
+                  inputName=(concat "data.dynamic.weapons." this._id ".data.oneOrTwoHanded.value")
+                  inputValue=this.data.oneOrTwoHanded.value
+                }}
+              {{/if}}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="attack"
+                disabled=true
+                title=(localize "anima.ui.combat.weapons.attack.title")
+                rollable=true
+                rollableMessage=(concat (localize "anima.ui.combat.weapons.attack.roll.message") this.name)
+                inputName=(concat "data.dynamic.weapons." this._id ".data.attack.value")
+                inputValue=this.data.attack.value
+              }}
+              {{#unless (is 'eq' this.data.isRanged.value true)}}
+                {{>
+                "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                  class="block"
+                  disabled=true
+                  title=(localize "anima.ui.combat.weapons.block.title")
+                  rollable=true
+                  rollableMessage=(concat (localize "anima.ui.combat.weapons.block.roll.message") this.name)
+                  inputName=(concat "data.dynamic.weapons." this._id ".data.block.value")
+                  inputValue=this.data.block.value
+                }}
+              {{/unless}}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="damage"
+                disabled=true
+                title=(localize "anima.ui.combat.weapons.damage.final.title")
+                inputName=(concat "data.dynamic.weapons." this._id ".data.damage.final.value")
+                inputValue=this.data.damage.final.value
+              }}
+              {{>
+              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+                class="initiative"
+                rollable=true
+                disabled=true
+                title=(localize "anima.ui.combat.weapons.initiative.final.title")
+                inputName=(concat "data.dynamic.weapons." this._id ".data.initiative.final.value")
+                inputValue=this.data.initiative.final.value
+              }}
+            </div>
+          {{/"systems/animabf/templates/common/ui/group-footer.hbs"}}
         {{/"systems/animabf/templates/common/ui/group.hbs"}}
       </div>
     {{/each}}
