--- a/src/templates/common/ui/group.hbs
+++ b/src/templates/common/ui/group.hbs
@@ -1,7 +1,7 @@
-<div class='common-group {{this.class}} {{#if this.contractible}}contractible-group {{#if (is 'eq' (lookup xRoot.data.data.ui.contractibleItems this.contractibleItemId) true)}}retracted{{/if}}{{/if}}'>
+<div class='common-group {{this.class}} {{#if this.contractible}}contractible-group {{#if (is 'eq' (lookup xRoot.data.data.ui.contractibleItems this.contractibleItemId) true)}}contracted{{/if}} {{#if this.contractFooter}}contract-footer{{/if}}{{/if}}'>
   {{#if this.contractible}}
     <img
-      class='contractible-button {{#if (is 'eq' (lookup xRoot.data.data.ui.contractibleItems this.contractibleItemId) true)}}retracted{{/if}}'
+      class='contractible-button {{#if (is 'eq' (lookup xRoot.data.data.ui.contractibleItems this.contractibleItemId) true)}}contracted{{/if}}'
       data-contractible-item-id='{{this.contractibleItemId}}'
       src='/systems/animabf/assets/images/expand-up.png'
     />
