--- a/src/templates/actor/parts/psychic/psychic.hbs
+++ b/src/templates/actor/parts/psychic/psychic.hbs
@@ -17,8 +17,10 @@
             {{> "systems/animabf/templates/actor/parts/psychic/parts/psychic-disciplines.hbs"}}
           </div>
         </div>
-        {{> "systems/animabf/templates/actor/parts/psychic/parts/mental-patterns.hbs"}}
-        {{> "systems/animabf/templates/actor/parts/psychic/parts/innate-psychic-powers.hbs"}}
+        <div class='second-row'>
+          {{> "systems/animabf/templates/actor/parts/psychic/parts/mental-patterns.hbs"}}
+          {{> "systems/animabf/templates/actor/parts/psychic/parts/innate-psychic-powers.hbs"}}
+        </div>
       </div>
     </div>
 
