--- a/src/scss/actor/parts/header.scss
+++ b/src/scss/actor/parts/header.scss
@@ -12,7 +12,8 @@
     .first-column {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
+      align-items: center;
     }
 
     .third-column .sub-column {
@@ -30,9 +31,6 @@
 
     img {
       border-radius: 1rem;
-
-      width: 10rem;
-      height: 10rem;
     }
   }
   // Actor image
@@ -90,9 +88,9 @@
 
   // Modifiers
   .modifiers {
-    .group-body {
+    .first-row {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
       grid-column-gap: 1rem;
     }
   }
@@ -100,9 +98,15 @@
 
   // Characteristics
   .characteristics {
+    height: 100%;
+
     .group-body {
       margin-top: 0;
       padding: 0.5rem;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
 
       .characteristic {
         margin-bottom: 0.265rem;
@@ -127,16 +131,22 @@
   }
   // Characteristics
 
+  // Resistances
+  .resistances {
+    .group-body {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+  // Resistances
+
   // Common resources
   .common-resources {
     .group-body {
       margin-top: 0;
       padding: 0.5rem;
-
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
 
       .movements {
         margin-top: 0.5rem;
@@ -146,17 +156,10 @@
         grid-column-gap: 0.5rem;
       }
 
-      .second-row {
-        margin-top: 0.5rem;
-
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-column-gap: 0.5rem;
-      }
-
       .first-row {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-column-gap: 0.5rem;
 
         margin-top: 0.5rem;
       }
