changes: improve notes UX

--- a/src/scss/actor/parts/general.scss
+++ b/src/scss/actor/parts/general.scss
@@ -391,6 +391,18 @@
 
       .note-row {
         margin-top: 0.75rem;
+
+        .editor {
+          @include input;
+
+          font-weight: inherit;
+
+          height: 15rem;
+          width: 100%;
+
+          margin-top: 0;
+          border-radius: 0.5rem;
+        }
       }
     }
   }
