--- a/src/templates/actor/parts/general/parts/notes.hbs
+++ b/src/templates/actor/parts/general/parts/notes.hbs
@@ -10,12 +10,7 @@
   <div id='notes-context-menu-container' class='group-body'>
     {{#each data.data.general.notes}}
       <div data-item-id='{{this._id}}' class='note-row'>
-        <input
-          name='data.dynamic.notes.{{this._id}}.name'
-          type='text'
-          class='input'
-          value='{{this.name}}'
-        />
+        {{editor content=this.name target=(concat "data.dynamic.notes." this._id ".name") button=true owner=true editable=true}}
       </div>
     {{/each}}
   </div>
